Fix T63399: Obj exporter does not respect "Apply Modifiers" settings